@@ -1,3 +1,7 @@
+2004-06-11  Michael Chastain  <mec.gnu@mindspring.com>
+
+	* gdb.cp/virtfunc.cc: Add copyright notice.
+
 2004-06-11  Randolph Chung  <tausq@debian.org>
 
 	* gdb.base/structs2.exp: Mark two tests as xfail because of a compiler
